# test-matsuzawa-20251209

./: opencode.json  pyproject.toml
.claude/: settings.json
.github/action/run-opencode/: action.yml
.github/scripts/: claude_langfuse_hook.py  claude_langfuse_sync.py
.github/workflows/: dev_compile_latex_with_open_code.yml  dev_run_evaluation_with_open_code.yml  dev_run_full_experiment_with_open_code.yml  dev_run_trial_experiment_with_claude_code.yml  dev_run_trial_experiment_with_codex.yml  dev_run_trial_experiment_with_open_code.yml  dev_run_trial_experiment_with_opencode.yml
.opencode/: opencode.jsonc
.research/results/: stderr.txt  stdout.txt
.research/results/comparative-1-clip-rn50-caltech101/: metrics.json
.research/results/comparative-1-clip-rn50-oxford-pets/: metrics.json
.research/results/comparative-1-gpt3.5-turbo-caltech101/: metrics.json
.research/results/comparative-1-gpt3.5-turbo-oxford-pets/: metrics.json
config/: config.yaml
config/runs/: comparative-1-clip-rn50-caltech101.yaml  comparative-1-clip-rn50-oxford-pets.yaml  comparative-1-gpt3.5-turbo-caltech101.yaml  comparative-1-gpt3.5-turbo-oxford-pets.yaml  comparative-2-clip-rn50-caltech101.yaml  comparative-2-clip-rn50-oxford-pets.yaml  comparative-2-gpt3.5-turbo-caltech101.yaml  comparative-2-gpt3.5-turbo-oxford-pets.yaml  proposed-clip-rn50-caltech101.yaml  proposed-clip-rn50-oxford-pets.yaml  proposed-gpt3.5-turbo-caltech101.yaml  proposed-gpt3.5-turbo-oxford-pets.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
(+9 files in other folders)
