[project]
name = "rua-bbps-experiments"
version = "0.1.0"
description = "RUA-BBPS experiment code with Hydra and WandB"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.12",
    "torchvision>=0.13",
    "hydra-core>=1.3",
    "wandb>=0.15",
    "transformers>=4.30",
    "optuna>=3.0",
    "openai>=0.27",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
